# elvira

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README  name.txt
data/: CMakeLists.txt  credentials.pc.cmake  elvira_crypto.pc.cmake
debian/: changelog  control  copyright  rules
gentoo/: Manifest  credentials-0.1.0.ebuild  elvira-0.1.0.ebuild  elvira-9999.ebuild  metadata.xml
include/: bigint.h  credential.h  credential_card.h  credential_crypto.h  credential_crypto_types.h  credential_keys.h  credential_terminal.h  credential_types.h  rsamod.h  smartcard_types.h
src/: CMakeLists.txt  bigint.c  credential.c  credential_card.c  credential_crypto.c  credential_terminal.c  rsamod.c
test/: CMakeLists.txt  test_credential.c  test_crypto.c  test_vectors.h  test_vectors_crypto.c
